# inspect

./: .gitignore  Main.hs  README  README.md  User.hs  build.sbt  inspect.cabal
src/main/scala/com/example/echo/: main.scala
src/test/scala/com/example/echo/: CountTest.scala
