cabal-version:       >=1.10
name:                inspect
version:             0.1.0.0
build-type:          Simple

executable inspect
  main-is:             Main.hs
  other-modules:       User
  build-depends:       base >= 4.6 && < 5,
                       base-compat >= 0.11 && < 0.12,
                       data-default-class,
                       mtl,
                       scotty,
                       stm,
                       text,
                       transformers,
                       wai-extra,
                       containers
  default-language:    Haskell2010
